// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrdersScreen component should render an error 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    color="error"
    textAlign="center"
  >
    Error message
  </Text>
</View>
`;

exports[`OrdersScreen component should render correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <FlatList
    ListEmptyComponent={
      <Text
        textAlign="center"
      >
        There are no orders to display.
      </Text>
    }
    data={Array []}
    keyExtractor={[Function]}
    renderItem={[Function]}
    style={
      Object {
        "backgroundColor": "#F2F2F2",
        "paddingHorizontal": 8,
      }
    }
  />
</View>
`;

exports[`OrdersScreen functions renderOrder 1`] = `
<OrderListItem
  details={
    Array [
      "Order #1",
      "1 item",
      "Total: $1.00",
      "01/01/2001",
    ]
  }
  image={
    Object {
      "uri": "http://s3.img-b.com/image/private/t_base,f_auto,dpr_2.0,c_lpad,w_75,h_75/product/test",
    }
  }
  onPress={[Function]}
  projectName="test"
  renderHeader={[Function]}
  title="test"
/>
`;

exports[`OrdersScreen functions renderOrderHeader 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "space-between",
    }
  }
>
  <Text
    capitalize="first"
    weight="bold"
  >
    test
  </Text>
</View>
`;

exports[`OrdersScreen functions setScreenTrackingInformation 1`] = `
Object {
  "name": "build:app:more:orders",
}
`;
